# ghdown

./: AGENTS.md  CHANGELOG.md  Cargo.toml  build.rs
.github/workflows/: build.yml  release.yml
src/: config.rs  download.rs  main.rs  proxy.rs  upgrade.rs
