[package]
name = "ghdown"
version = "0.1.0"
edition = "2021"
description = "GitHub Release downloader with proxy acceleration and auto failover"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
